[gd_scene load_steps=10 format=3 uid="uid://db7i0y7lbr1h"]

[ext_resource type="Environment" uid="uid://b6rnryq5hp7ar" path="res://physics/ui/navigation/navball_environment.tres" id="2_2nwae"]
[ext_resource type="Script" path="res://physics/ui/navigation/navball.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://csc3uxhx5fuu8" path="res://physics/ui/navigation/navball_raw.tscn" id="3_4sdby"]
[ext_resource type="PackedScene" uid="uid://dlmjt803gm55n" path="res://physics/ui/navigation/prograde.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bmxehu51cpanh" path="res://physics/ui/navigation/retrograde.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://grbqtc1fk048" path="res://physics/ui/navigation/normal.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://crc5ksrl3j2e3" path="res://physics/ui/navigation/radial_out.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://rn6w4h82i7j4" path="res://physics/ui/navigation/anti_normal.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://b18igp0m4g5d6" path="res://physics/ui/navigation/radial_in.tscn" id="9"]

[node name="Navball" type="Node3D"]
script = ExtResource("3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_2nwae")

[node name="SpotLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.462008, -0.823578, 0.32904, -0.598002, -0.0153061, 0.801349, -0.654937, -0.566996, -0.499573, 0.838627, 1.89315, -0.932676)
light_color = Color(1, 0.992157, 0.886275, 1)

[node name="navball" parent="." instance=ExtResource("3_4sdby")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 2.15176, 0)
projection = 1
size = 2.1

[node name="Prograde" parent="." instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44109, 0, 0)

[node name="Retrograde" parent="." instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85619, 0, 0)

[node name="RadialIn" parent="." instance=ExtResource("9")]

[node name="RadialOut" parent="." instance=ExtResource("7")]

[node name="Normal" parent="." instance=ExtResource("6")]

[node name="AntiNormal" parent="." instance=ExtResource("8")]

[editable path="navball"]
